k8s/apps/base/jellyfin/konomitv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: konomitv
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: konomitv
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: jellyfin-konomitv@kubernetescrd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: konomitv
  ports:
    - name: https
      port: 7000
      targetPort: https
      protocol: TCP
