k8s/apps/base/jellyfin/konomitv/external-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: konomitv-basic-auth
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: konomitv
    app.kubernetes.io/component: external-ingress
spec:
  basicAuth:
    secret: konomitv-basic-auth
    removeHeader: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: konomitv-external-traefik
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: konomitv
    app.kubernetes.io/component: external-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: jellyfin-konomitv-basic-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: konomitv.kentaro1043.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: konomitv
                port:
                  name: https
